--- a/components/page.css
+++ b/components/page.css
@@ -1,2 +1,594 @@
-@import url(./header/header.css);
-@import url(./intro/intro.css);
+.header {
+  height: 570px;
+  width: 100%;
+  background-color: black;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+.header__content {
+  padding: 26px 98px;
+  height: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header__name {
+  color: white;
+  cursor: pointer;
+}
+@media (min-width: 1366px) {
+  .header__name {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 1280) {
+  .header__name {
+    font-size: calc(20px + 0 * ((100vw - 1024px) / (1366 - 1280)));
+  }
+}
+@media screen and (min-width: 1024) and (max-width: 1279) {
+  .header__name {
+    font-size: calc(20px + 0 * ((100vw - 1024px) / (1280 - 1024)));
+  }
+}
+@media screen and (min-width: 768) and (max-width: 1023) and (orientation: landscape) {
+  .header__name {
+    font-size: calc(20px + 0 * ((100vw - 768px) / (1024 - 768)));
+  }
+}
+@media screen and (max-width: 767) {
+  .header__name {
+    font-size: calc(20px + 0 * ((100vw - 320px) / (768 - 320)));
+  }
+}
+@media (max-width: 320px) {
+  .header__name {
+    font-size: 20px;
+  }
+}
+.header__links {
+  margin-left: auto;
+  margin-right: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+.header__links-item {
+  color: white;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+}
+.header__links-item::before {
+  content: "";
+  display: inline-block;
+  height: 2px;
+  position: absolute;
+  bottom: -3px;
+  background-color: white;
+}
+.header__links-item:hover::before {
+  -webkit-animation: link-hover 0.3s linear;
+          animation: link-hover 0.3s linear;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+.header__social {
+  cursor: pointer;
+}
+
+@-webkit-keyframes link-hover {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes link-hover {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+.intro {
+  margin: 0 auto;
+  margin-top: 90px;
+}
+.intro .swiper {
+  max-width: 1366px;
+  width: 100%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.intro .swiper-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.intro .swiper-button-prev {
+  height: 33px;
+  width: 33px;
+  left: 33px;
+}
+.intro .swiper-button-prev img {
+  cursor: pointer;
+}
+.intro .swiper-button-prev::after {
+  display: none;
+}
+.intro .swiper-button-next {
+  height: 33px;
+  width: 33px;
+  right: 33px;
+}
+.intro .swiper-button-next img {
+  cursor: pointer;
+}
+.intro .swiper-button-next::after {
+  display: none;
+}
+.intro .swiper-slide-active hr {
+  -webkit-animation: hr-swiper 8s linear;
+          animation: hr-swiper 8s linear;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+.intro__item {
+  margin: 0 auto;
+  padding: 175px 200px;
+  max-width: 1170px;
+  width: 100%;
+  height: clamp(145px, 42vw, 580px);
+  background: url(../../public/img/intro/display/slide-item.jpg) center/100% 100% no-repeat;
+  color: white;
+}
+.intro__item hr {
+  margin-bottom: 36px;
+  height: 1px;
+  width: 0;
+  background-color: white;
+}
+.intro__item-name {
+  font-size: 70px;
+  line-height: 114%;
+  color: white;
+}
+.intro__item-view {
+  margin-left: auto;
+  height: 90px;
+  width: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 15px;
+  font-weight: 500;
+  color: black;
+  background-color: white;
+  border-radius: 100%;
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+  cursor: pointer;
+}
+.intro__item-view:hover {
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.intro__info {
+  padding: 160px 198px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+.intro__info::after {
+  content: "";
+  position: absolute;
+  top: -304px;
+  left: -123px;
+  z-index: -2;
+  display: inline-block;
+  height: 641px;
+  width: 641px;
+  border-radius: 641px;
+  background: #F5F5F5;
+}
+.intro__label {
+  margin-bottom: 22px;
+  font-weight: 500;
+  text-align: center;
+}
+.intro__title {
+  margin-bottom: 93px;
+  width: 615px;
+  font-size: 34px;
+  line-height: 130%;
+  font-weight: 500;
+  text-align: center;
+}
+.intro__block-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 100px;
+}
+.intro__block-text .intro__column:last-child {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
+}
+.intro__block-text .intro__column:last-child .intro__text {
+  font-size: 17px;
+}
+.intro__column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 30%;
+          flex: 1 0 30%;
+}
+.intro__column hr {
+  margin-bottom: 34px;
+  height: 1px;
+  width: 400px;
+  background-color: black;
+}
+.intro__text {
+  margin-bottom: 51px;
+  font-size: 20px;
+  line-height: 150%;
+}
+.intro__button {
+  height: 54px;
+  width: 170px;
+  color: white;
+  background-color: black;
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+}
+.intro__button:hover {
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  color: black;
+  background-color: white;
+  border: solid 1px black;
+}
+.intro__section-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 30px;
+}
+.intro__section-row .intro__section-column:nth-child(1) {
+  background: url(../../public/img/intro/display/section-item-1.jpg) center/100% no-repeat;
+}
+.intro__section-row .intro__section-column:nth-child(2) {
+  background: url(../../public/img/intro/display/section-item-2.jpg) center/100% no-repeat;
+}
+.intro__section-row .intro__section-column:nth-child(3) {
+  background: url(../../public/img/intro/display/section-item-3.jpg) center/100% no-repeat;
+}
+.intro__section-row .intro__section-column:nth-child(4) {
+  background: url(../../public/img/intro/display/section-item-4.jpg) center/100% no-repeat;
+}
+.intro__section-column {
+  padding: 42px 50px;
+  width: 304px;
+  height: 400px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  cursor: pointer;
+}
+.intro__section-column:hover .intro__section-read {
+  -webkit-transition: margin-top 0.1s linear;
+  transition: margin-top 0.1s linear;
+  margin-top: 21px;
+  opacity: 1;
+}
+.intro__section-icon {
+  margin-bottom: 24px;
+}
+.intro__section-name {
+  height: 60px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 150%;
+  color: white;
+}
+.intro__section-read {
+  position: relative;
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+  margin-top: 0px;
+  font-size: 16px;
+  line-height: 0;
+  opacity: 0;
+  color: white;
+  cursor: pointer;
+}
+.intro__section-read::after {
+  content: "";
+  margin-left: 17px;
+  display: inline-block;
+  width: 16px;
+  height: 8px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  background: url(../../public/img/intro/display/arrow-section.svg) center/100% no-repeat;
+}
+.intro__section-read:hover {
+  text-decoration: underline;
+}
+
+@-webkit-keyframes hr-swiper {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 200px;
+  }
+}
+
+@keyframes hr-swiper {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 200px;
+  }
+}
+.project {
+  padding: 140px 98px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.project__title {
+  margin-bottom: 115px;
+  font-size: 70px;
+  font-weight: 500;
+  line-height: 115%;
+  text-align: center;
+}
+.project hr {
+  margin-bottom: 29px;
+  width: 100%;
+  height: 1px;
+  background-color: black;
+}
+.project__types {
+  margin-bottom: 93px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 50px;
+  cursor: pointer;
+}
+.project__radio {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+}
+.project__radio:checked + span {
+  text-decoration: underline;
+}
+.project__types-item {
+  position: relative;
+}
+.project__list {
+  margin-bottom: 100px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto 30px auto 30px auto;
+  grid-template-columns: repeat(3, auto);
+  gap: 30px;
+}
+.project__item {
+  position: relative;
+}
+.project__item:hover .project__item-text {
+  opacity: 1;
+}
+.project__item-text {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 144px 0 0 50px;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+}
+.project__item-name {
+  margin-bottom: 8px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 140%;
+  color: white;
+}
+.project__item-type {
+  font-size: 15px;
+  font-weight: 500;
+  color: white;
+}
+.project__more {
+  margin-bottom: 140px;
+  width: 110px;
+  height: 110px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 15px;
+  font-weight: 500;
+  border-radius: 100%;
+  background-color: #F5F5F5;
+}
+.project__work {
+  padding: 149px 98px;
+  margin: 0 -98px;
+  width: 1366px;
+  position: relative;
+  overflow: hidden;
+  background-color: #0E0E0E;
+}
+.project__work::after {
+  content: "";
+  position: absolute;
+  top: -297px;
+  right: -226px;
+  display: inline-block;
+  height: 641px;
+  width: 641px;
+  border-radius: 641px;
+  background: #202020;
+}
+.project__work-title {
+  margin-bottom: 80px;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 120%;
+  color: white;
+}
+.project__work-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.project__work-list {
+  margin-right: 140px;
+  min-width: 260px;
+}
+.project__work-item {
+  margin-bottom: 24px;
+  position: relative;
+}
+.project__work-item span {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 140%;
+  color: #6F6F6F;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.project__work-item span::before {
+  content: "";
+  display: inline-block;
+  opacity: 0;
+  height: 1px;
+  width: 40px;
+  margin-right: 30px;
+  background-color: white;
+}
+.project__work-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+.project__work-input:checked + span {
+  color: white;
+}
+.project__work-input:checked + span::before {
+  opacity: 1;
+  margin-right: 50px;
+}
+.project__work-text {
+  margin-bottom: 53px;
+  width: 395px;
+  font-size: 17px;
+  line-height: 160%;
+  color: white;
+}
+.project__work-button {
+  height: 54px;
+  width: 170px;
+  font-weight: 500;
+  background-color: white;
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+  cursor: pointer;
+}
+.project__work-button:hover {
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  border: solid 1px white;
+  color: white;
+  background-color: black;
+}
+.project__work-decor {
+  position: absolute;
+  z-index: 5;
+  top: 237px;
+  right: 162px;
+}
