--- a/components/project/_project.scss
+++ b/components/project/_project.scss
@@ -1,5 +1,5 @@
 .project {
-    padding: 140px 98px;
+    padding: 140px 98px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
