--- a/public/css/mixins/_text-style.scss
+++ b/public/css/mixins/_text-style.scss
@@ -20,7 +20,7 @@
     font-style: normal;
 }
 
-p, a, h1, h2, h3, h4, h5, h6, div, button {
+p, a, h1, h2, h3, h4, h5, h6, div, button, pre {
     font-family: "Inter";
     font-size: 16px;
     font-weight: 400;
